nemu/src/cpu/instr/.err
int.c:2:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(int_)
                ^
